[package]
name = "advent-of-code-leaderboard"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
dirs = "4"
hyper = { version = "0.14", features = ["full"] }
minijinja = "0.26"
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tower = "0.4"
